--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,9 +17,9 @@ body {
   color: #212121;
 }
 
-/* h1 {
+p {
   margin: 0;
-} */
+}
 
 /* img {
   display: block;
@@ -39,7 +39,7 @@ body {
 
 /* ===== header ===== */
 
-.header__container {
+.header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -87,4 +87,79 @@ body {
   content: '';
   clear: both;
   display: table;
+}
+
+/* checkbox */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 150px;
+  height: 22px;
+  font-size: 16px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 110;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 18px;
+  width: 18px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(18px);
+  -ms-transform: translateX(18px);
+  transform: translateX(18px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 22px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* ===== gallery ===== */
+
+.gallery-container {
+  padding-top: 0;
+}
+
+.images-info {
+  text-align: right;
 }
