--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -199,11 +199,13 @@ input:checked + .slider:before {
 }
 
 .card-image-load {
-  width: 400px;
-  height: 40px;
+  width: 280px;
+  /* height: 30px; */
   margin-top: 10px;
+  padding: 6px;
   background-color: #ccc;
   border-radius: 6px;
+  font-size: 16px;
   opacity: 0.3;
 }
 
