--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -205,6 +205,10 @@ input:checked + .slider:before {
   transition: opacity 0.8s;
 }
 
+.likes .fa {
+  color: brown;
+}
+
 .card-image {
   display: block;
   width: 280px;
@@ -307,8 +311,8 @@ input:checked + .slider:before {
 
 /* The Modal (background) */
 .modal {
-  display: none;
-  /* Hidden by default */
+  display: none; /* Hidden by default */
+
   position: fixed; /* Stay in place */
   z-index: 10; /* Sit on top */
   padding-top: 100px; /* Location of the box */
@@ -321,29 +325,71 @@ input:checked + .slider:before {
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-/* Modal Content */
-.modal-content {
+.modal-wrapper {
   position: relative;
-  background-color: #fefefe;
   margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
   width: 80%;
+  background-color: #fefefe;
+  border: 1px solid #888;
+  border-radius: 5px;
 }
 
 /* The Close Button */
-.close {
+.modal-close {
   position: absolute;
   top: 5px;
   right: 15px;
-  color: #aaaaaa;
+  /* color: #aaaaaa; */
+  color: black;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
+.modal-close:hover,
+.modal-close:focus {
+  color: yellowgreen;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* Modal content */
+.modal-content {
+  display: flex;
+}
+
+.modal-large-image {
+  width: 100%;
+  border-radius: 5px;
+  /* max-width: 1000px; */
+}
+
+.modal-image {
+  object-fit: cover;
+  width: 60%;
+  padding: 20px;
+}
+
+.modal-info {
+  padding: 20px;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  padding-top: 5px;
+}
+
+.modal-text-label {
+  display: inline;
+}
+
+.modal-text {
+  width: 100%;
+  height: 100%;
+  resize: none;
+  margin-bottom: 10px;
+}
+
+.modal-submit {
+  margin-top: 10px;
 }
